--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
     <div id="toolbar">
       
-	  <a href="#" id="vbp_r" class="button" active>Product by Region</a>
+	  <a href="#" id="vbp_r" class="button active" >Product by Region</a>
 	  <a href="#" id="vbr_p" class="button"> Region by Product</a>
 	  <a href="#" id="vbrp" class="button">Product & Region</a>
 	 
